--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta name="author" content="Jozef Krajnak, JTech">
     <title>JTech</title>
     
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/cover/">
-
     <!-- Bootstrap core CSS -->
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -38,9 +36,9 @@
     <div class="inner">
       <h3 class="masthead-brand">JTeck</h3>
       <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="#">JTech</a>
-        <a class="nav-link" href="#">Služby</a>
-        <a class="nav-link" href="#">Kontakt</a>
+        <a class="nav-link active" href="jtech.sk">O nás</a>
+        <a class="nav-link" href="sluzby.html">Ponuka</a>
+        <a class="nav-link" href="kontakt.html">Kontakt</a>
       </nav>
     </div>
   </header>
@@ -49,7 +47,7 @@
     <h1 class="cover-heading">Cover your page.</h1>
     <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
     <p class="lead">
-      <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+      <a href="sluzby.html" class="btn btn-lg btn-secondary">Viac</a>
     </p>
   </main>
 
