--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="masthead mb-auto">
     <div class="inner">
-      <h3 class="masthead-brand">JTeck</h3>
+      <h3 class="masthead-brand">JTech</h3>
       <nav class="nav nav-masthead justify-content-center">
         <a class="nav-link active" href="jtech.sk">O nás</a>
         <a class="nav-link" href="sluzby.html">Ponuka</a>
@@ -53,7 +53,7 @@
 
   <footer class="mastfoot mt-auto">
     <div class="inner">
-      <p>© Copyright 2019<a href="https://jtech.sk/">JTech</a></p>
+      <p>© Copyright 2019 <a href="https://jtech.sk/">JTech</a></p>
     </div>
   </footer>
 </div>
