--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
       <h3 class="masthead-brand">JTech</h3>
       <nav class="nav nav-masthead justify-content-center">
         <a class="nav-link active" href="jtech.sk">O nás</a>
-        <a class="nav-link" href="sluzby.html">Ponuka</a>
+        <a class="nav-link" href="sluzby.html">Služby</a>
+        <a class="nav-link" href="zariadenia.html">Zariadenia</a>
         <a class="nav-link" href="kontakt.html">Kontakt</a>
       </nav>
     </div>
