--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
         <a class="nav-link" href="sluzby.html">Služby</a>
         <a class="nav-link" href="zariadenia.html">Zariadenia</a>
         <a class="nav-link" href="kontakt.html">Kontakt</a>
+        <a class="nav-link" href="kontakt.html">English</a>
       </nav>
     </div>
   </header>
 
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">Cover your page.</h1>
+    <h1 class="cover-heading">Špecializovaný elektrikár.Hodinový manžel.Webový vývojar</h1>
     <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
     <p class="lead">
       <a href="sluzby.html" class="btn btn-lg btn-secondary">Viac</a>
