--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </header>
 
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">Špecializovaný elektrikár.Hodinový manžel.Webový vývojar</h1>
+    <h1 class="cover-heading">🔧 Technik</h1>
     <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
     <p class="lead">
       <a href="sluzby.html" class="btn btn-lg btn-secondary">Viac</a>
