--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
   </header>
 
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">🔧 Technik</h1>
-    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+    <h1 class="cover-heading">🔧 Technické riešenia na mieru</h1>
+    <p class="lead">Technické riešenia na mieru</p>
     <p class="lead">
-      <a href="sluzby.html" class="btn btn-lg btn-secondary">Viac</a>
+      <a href="sluzby.html" class="btn btn-lg btn-secondary">☆ Viac</a>
     </p>
   </main>
 
