--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
   <main role="main" class="inner cover">
     <h1 class="cover-heading">🔧 Technické riešenia na mieru</h1>
-    <p class="lead">Technické riešenia na mieru</p>
+    <p class="lead">Elektrické zariadenia, poradenstvo, vývoj softwaru</p>
     <p class="lead">
-      <a href="sluzby.html" class="btn btn-lg btn-secondary">☆ Viac</a>
+      <a href="sluzby.html" class="btn btn-lg btn-secondary">☆ viac</a>
     </p>
   </main>
 
