--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <h1 class="cover-heading">🔧 Technické riešenia na mieru</h1>
     <p class="lead">Elektrické zariadenia, poradenstvo, vývoj softwaru</p>
     <p class="lead">
-      <a href="sluzby.html" class="btn btn-lg btn-secondary">☆ viac</a>
+      <a href="sluzby.html" class="btn btn-lg btn-secondary">★ viac</a>
     </p>
   </main>
 
