--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     <div class="inner">
       <h3 class="masthead-brand">JTech</h3>
       <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="jtech.sk">O nás</a>
+        <a class="nav-link active" href="https://jtech.sk/">O nás</a>
         <a class="nav-link" href="sluzby.html">Služby</a>
         <a class="nav-link" href="zariadenia.html">Zariadenia</a>
         <a class="nav-link" href="kontakt.html">Kontakt</a>
-        <a class="nav-link" href="kontakt.html">English</a>
+        <a class="nav-link" href="en/index.html">English</a>
       </nav>
     </div>
   </header>
@@ -48,7 +48,7 @@
     <h1 class="cover-heading">🔧 Technické riešenia na mieru</h1>
     <p class="lead">Elektrické zariadenia, poradenstvo, vývoj softwaru</p>
     <p class="lead">
-      <a href="/sluzby.html" class="btn btn-lg btn-secondary">★ viac</a>
+      <a href="sluzby.html" class="btn btn-lg btn-secondary">★ viac</a>
     </p>
   </main>
 
