--- a/sluzby.html
+++ b/sluzby.html
@@ -9,7 +9,7 @@
     
     <!-- Bootstrap core CSS -->
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -34,11 +34,11 @@
     <div class="inner">
       <h3 class="masthead-brand">JTech</h3>
       <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="jtech.sk">O nás</a>
+        <a class="nav-link active" href="https://jtech.sk/">O nás</a>
         <a class="nav-link" href="sluzby.html">Služby</a>
         <a class="nav-link" href="zariadenia.html">Zariadenia</a>
         <a class="nav-link" href="kontakt.html">Kontakt</a>
-        <a class="nav-link" href="kontakt.html">English</a>
+        <a class="nav-link" href="en/index.html">English</a>
       </nav>
     </div>
   </header>
