--- a/sluzby.html
+++ b/sluzby.html
@@ -42,6 +42,7 @@
       </nav>
     </div>
   </header>
+      <i class="glyphicon glyphicon-home white"></i>
     <div class="list-group">
       <a href="#" class="list-group-item active">
           <span class="glyphicon glyphicon-camera"></span> Pictures <span class="badge">25</span>
