--- a/sluzby.html
+++ b/sluzby.html
@@ -34,8 +34,8 @@
     <div class="inner">
       <h3 class="masthead-brand">JTech</h3>
       <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="https://jtech.sk/">O nás</a>
-        <a class="nav-link" href="sluzby.html">Služby</a>
+        <a class="nav-link" href="https://jtech.sk/">O nás</a>
+        <a class="nav-link active" href="sluzby.html">Služby</a>
         <a class="nav-link" href="zariadenia.html">Zariadenia</a>
         <a class="nav-link" href="kontakt.html">Kontakt</a>
         <a class="nav-link" href="en/index.html">English</a>
