--- a/sluzby.html
+++ b/sluzby.html
@@ -42,21 +42,13 @@
       </nav>
     </div>
   </header>
-      <i class="glyphicon glyphicon-home white"></i>
-    <div class="list-group">
-      <a href="#" class="list-group-item active">
-          <span class="glyphicon glyphicon-camera"></span> Pictures <span class="badge">25</span>
-      </a>
-      <a href="#" class="list-group-item">
-          <span class="glyphicon glyphicon-file"></span> Documents <span class="badge">145</span>
-      </a>
-      <a href="#" class="list-group-item">
-          <span class="glyphicon glyphicon-music"></span> Music <span class="badge">50</span>
-      </a>
-      <a href="#" class="list-group-item">
-          <span class="glyphicon glyphicon-film"></span> Videos <span class="badge">8</span>
-      </a>
-    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item"><i class="glyphicon glyphicon-home white"></i>Cras justo odio</li>
+      <li class="list-group-item">Dapibus ac facilisis in</li>
+      <li class="list-group-item">Morbi leo risus</li>
+      <li class="list-group-item">Porta ac consectetur ac</li>
+      <li class="list-group-item">Vestibulum at eros</li>
+    </ul>
   <footer class="mastfoot mt-auto">
     <div class="inner">
       <p>© Copyright 2019 <a href="https://jtech.sk/">JTech</a></p>
