--- a/sluzby.html
+++ b/sluzby.html
@@ -42,12 +42,12 @@
       </nav>
     </div>
   </header>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item"><i class="glyphicon glyphicon-home white"></i>Cras justo odio</li>
-      <li class="list-group-item">Dapibus ac facilisis in</li>
-      <li class="list-group-item">Morbi leo risus</li>
-      <li class="list-group-item">Porta ac consectetur ac</li>
-      <li class="list-group-item">Vestibulum at eros</li>
+    <ul>
+      <li><i class="glyphicon glyphicon-home white"></i>Cras justo odio</li>
+      <li>Dapibus ac facilisis in</li>
+      <li>Morbi leo risus</li>
+      <li>Porta ac consectetur ac</li>
+      <li>Vestibulum at eros</li>
     </ul>
   <footer class="mastfoot mt-auto">
     <div class="inner">
