--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         -ms-user-select: none;
         user-select: none;
       }
-
       @media (min-width: 768px) {
         .bd-placeholder-img-lg {
           font-size: 3.5rem;
@@ -39,7 +38,7 @@
         <a class="nav-link" href="sluzby.html">Služby</a>
         <a class="nav-link" href="zariadenia.html">Zariadenia</a>
         <a class="nav-link" href="kontakt.html">Kontakt</a>
-        <a class="nav-link" href="en/index.html">English</a>
+        <a class="nav-link" href="en/index.html">|English|</a>
       </nav>
     </div>
   </header>
