--- a/sluzby.html
+++ b/sluzby.html
@@ -38,7 +38,7 @@
         <a class="nav-link active" href="sluzby.html">Služby</a>
         <a class="nav-link" href="zariadenia.html">Zariadenia</a>
         <a class="nav-link" href="kontakt.html">Kontakt</a>
-        <a class="nav-link" href="en/index.html">English</a>
+        <a class="nav-link" href="en/index.html">|English|</a>
       </nav>
     </div>
   </header>
