--- a/sluzby.html
+++ b/sluzby.html
@@ -42,7 +42,14 @@
       </nav>
     </div>
   </header>
-
+      <body>
+        <ul>
+          <li>Elektroinštalačné práce</li>
+          <li>Zapájanie elektrospotrebičov</li>
+          <li>Diaľkové ovládania pomocou GSM siete</li>
+          <li>Vývoj elektrických zariadení na mieru</li>
+        </ul>
+      </body> 
   <footer class="mastfoot mt-auto">
     <div class="inner">
       <p>© Copyright 2019 <a href="https://jtech.sk/">JTech</a></p>
