--- a/kontakt.html
+++ b/kontakt.html
@@ -44,7 +44,7 @@
   </header>
     <p><img src="assets/cislo.png" class="img-fluid" alt="Responsive image"></p>
     <p><img src="assets/posta.png" class="img-fluid" alt="Responsive image"></p>
-    <p><b>Tešíme sa na spoluprácu!</b></p>
+    <p><b>Teším sa na spoluprácu!</b></p>
   <footer class="mastfoot mt-auto">
     <div class="inner">
       <p>© Copyright 2019 <a href="https://jtech.sk/">JTech</a></p>
