--- a/sluzby.html
+++ b/sluzby.html
@@ -43,7 +43,7 @@
     </div>
   </header>
       <body>
-        <ul>
+        <ul class="list-group">
           <li>Elektroinštalačné práce</li>
           <li>Zapájanie elektrospotrebičov</li>
           <li>Diaľkové ovládania pomocou GSM siete</li>
